# meal-planner

./: .env.example  .gitattributes  .gitignore  .mise.toml  IMPROVEMENT_PLAN.md  MISE_GUIDE.md  QUICK_START.md  README.md  USAGE.md  admin.pem  agent-analysis.md  docker-compose.yml  meal-planner-agent-graph.md  meal-planner-info.md
.claude/: settings.local.json
meal-planner-back/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  backend-edge-test.md  error_log.txt  meal-planner-agent-prompt.md  pyproject.toml  requirements.txt  run_example.py  run_server.py  test_1day_1meal.json  test_request.json
meal-planner-back/app/: config.py  main.py
meal-planner-back/app/agents/: AGENTS.md
meal-planner-back/app/controllers/: __init__.py  meal_plan.py
meal-planner-back/app/models/: requests.py  responses.py  state.py
meal-planner-back/app/services/: csv_recipe_search_service.py  ingredient_pricing.py  llm_service.py  recipe_search.py  recipe_search_service.py  regeneration_service.py  stream_service.py
meal-planner-back/app/utils/: constants.py  logging.py  nutrition.py  prompt_safety.py
meal-planner-back/claudedocs/: edge_cases.md  final_test_execution_report.md  implementation_summary.md  phase_completion_report.md  validation_checklist.md
meal-planner-back/data/: default_ingredient_prices.json  recipes_with_nutrition.csv
meal-planner-back/data/price_cache/: prices_2026-01-11.json
meal-planner-back/docs/: agent_graph.mmd
meal-planner-back/scripts/: generate_graph_visualization.py
meal-planner-back/tests/: conftest.py  test_graph_execution.py
(+97 files in other folders)
